vlib/v/checker/tests/inout/in_mismatch_type.out
vlib/v/checker/tests/inout/in_mismatch_type.v:13:7: error: the data type on the left of `in` does not match the array item type
   11|     }
   12|     s := 'abcd'
   13|     if 1 in a_s {
                ~~
   14|         println('ok')
   15|     }
vlib/v/checker/tests/inout/in_mismatch_type.v:16:7: error: the data type on the left of `in` does not match the map key type
   14|         println('ok')
   15|     }
   16|     if 2 in m {
                ~~
   17|         println('yeah')
   18|     }
vlib/v/checker/tests/inout/in_mismatch_type.v:19:7: error: the data type on the left of `in` must be a string
   17|         println('yeah')
   18|     }
   19|     if 3 in s {
                ~~
   20|         println('dope')
   21|     }
vlib/v/checker/tests/inout/in_mismatch_type.v:22:9: error: the data type on the left of `in` must be a string
   20|         println('dope')
   21|     }
   22|     if `a` in s {
                  ~~
   23|         println("oh no :'(")
   24|     }
vlib/v/checker/tests/inout/in_mismatch_type.v:25:7: error: `in` can only be used with an array/map/string
   23|         println("oh no :'(")
   24|     }
   25|     if 1 in 12 {
                ~~
   26|         println('right')
   27|     }
vlib/v/checker/tests/inout/in_mismatch_type.v:28:12: error: the data type on the left of `in` does not match the map key type
   26|         println('right')
   27|     }
   28|     if Int(2) in m {
                     ~~
   29|         println('yeah')
   30|     }
vlib/v/checker/tests/inout/in_mismatch_type.v:31:15: error: the data type on the left of `in` does not match the array item type
   29|         println('yeah')
   30|     }
   31|     if Str2('3') in a_i {
                        ~~
   32|         println('sure')
   33|     }
vlib/v/checker/tests/inout/in_mismatch_type.v:34:15: error: the data type on the left of `in` does not match the array item type
   32|         println('sure')
   33|     }
   34|     if Str3('2') in a_i {
                        ~~
   35|         println('all right')
   36|     }